fixed multiplchoice form layout bug.

--- a/css/activity/ets-act-multichoice.css
+++ b/css/activity/ets-act-multichoice.css
@@ -41,6 +41,7 @@
 	background: #f7f7f7;
 	width:320px;
 	float:right;
+    height: 100%
 }
 #ets-act-mc-form-hd {
 	padding: 10px 0 0 0;
